Cambios en modulo de vacunas

--- a/src/app/pages/admin/prestamos/nuevo-prestamo.component.html
+++ b/src/app/pages/admin/prestamos/nuevo-prestamo.component.html
@@ -45,7 +45,7 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label label-form-decora">Usuario que crea el retiro:</label>
+                                <label class="control-label label-form-decora">Usuario que registra:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-user"></i></div>
                                     <input type="text" class="form-control" id="usuario" autocomplete="off" formControlName="usuarioNombre" [readOnly]="true">
