--- a/src/app/pages/admin/vacunas-codiv19/nuevo-reg-vacuna.component.html
+++ b/src/app/pages/admin/vacunas-codiv19/nuevo-reg-vacuna.component.html
@@ -10,7 +10,7 @@
                     <div class="row p-t-20">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label label-form-decora">Usuario que crea registra:</label>
+                                <label class="control-label label-form-decora">Usuario que registra:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-user"></i></div>
                                     <input type="text" class="form-control" id="usuario" autocomplete="off" formControlName="usuarioNombre" [readOnly]="true">
@@ -48,7 +48,7 @@
                                 <label class="control-label label-form-decora">Farmaceutica que aplicó:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-stats-up"></i></div>
-                                    <select formControlName="farmaceutica" class="form-control custom-select" required>
+                                    <select formControlName="farmaPriDosis" class="form-control custom-select" required>
                                         <option value="">--Seleccione una opción--</option>
                                         <option value="Pfizer">Pfizer</option>
                                         <option value="Moderna">Moderna</option>
