--- a/src/app/pages/gest-documental/retiros/retiros.component.html
+++ b/src/app/pages/gest-documental/retiros/retiros.component.html
@@ -35,7 +35,7 @@
                                 <th class="text-center">Estado</th>
                                 <th class="text-center">PDF</th>
                                 <th class="text-center">Fecha de renuncia</th>
-                                <th class="text-center">Usuario que registra</th>
+                                <th class="text-center">Usuario que registró</th>
                                 <th class="text-center">Fecha de registro</th>
                                 <th class="text-center">Acción</th>
                             </tr>
