Se termina modulo aspirantes - vacunados y cargue de nuevos tipos de pdf, arreglos en presentacion

--- a/src/app/pages/gest-documental/retiros/retiros.component.html
+++ b/src/app/pages/gest-documental/retiros/retiros.component.html
@@ -98,8 +98,8 @@
                     <th>
                         <tr>ID de transacción:</tr>
                         <tr>Motivo de retiro:</tr>
-                        <tr>Presento encuesta:</tr>
-                        <tr>Presento entrevista:</tr>
+                        <tr>Presento encuesta de retiro:</tr>
+                        <tr>Presento entrevista de retiro:</tr>
                         <tr *ngIf="retiroDetalle.estado === 'FIRMADO'">Fecha de firma:</tr>
                         <tr *ngIf="retiroDetalle.estadoCargoPDF">Usuario que cargo PDF:</tr>
                         <tr *ngIf="retiroDetalle.estadoCargoPDF">Fecha de cargue PDF:</tr>
