--- a/src/app/pages/personalrrhh/modeloswc/modeloswc.component.html
+++ b/src/app/pages/personalrrhh/modeloswc/modeloswc.component.html
@@ -71,11 +71,11 @@
                                         <i class="fa fa-pencil text-inverse m-r-10"></i>
                                     </a>
                                     &nbsp;
-                                    <a *ngIf="modelo.estado" class="cursor" title="Inactivar Modelo" data-toggle="tooltip" data-original-title="Inactivar Modelo del Sistema" (click)="inactivarModelo(modelo)">
+                                    <a *ngIf="modelo.estado" class="cursor" title="Inactivar Modelo del Sistema" data-toggle="tooltip" data-original-title="Inactivar Modelo del Sistema" (click)="inactivarModelo(modelo)">
                                         <i class="fa fa-close text-danger"></i>
                                     </a>
 
-                                    <a *ngIf="!modelo.estado" class="cursor" title="Reactivar Modelo" data-toggle="tooltip" data-original-title="Reactivar Modelo en el Sistema" (click)="reActivarModelo(modelo)">
+                                    <a *ngIf="!modelo.estado" class="cursor" title="Reactivar Modelo del Sistema" data-toggle="tooltip" data-original-title="Reactivar Modelo en el Sistema" (click)="reActivarModelo(modelo)">
                                         <i class="fa fa-link text-warning"></i>
                                     </a>
                                 </td>
