--- a/src/styles.css
+++ b/src/styles.css
@@ -86,3 +86,16 @@
     width: 50px;
     height: 50px;
 }
+
+.fullscreen-modal .modal-dialog {
+    margin: 0;
+    margin-right: auto;
+    margin-left: auto;
+    width: 100%;
+}
+
+.div-border-decorator {
+    border: 1px;
+    border-style: solid;
+    border-color: #b12222;
+}
