Correcciones de ubicacion, personalizacion de menu por ROL, nuevas funcionalidades

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -37,11 +37,11 @@
                         <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded" type="submit">Log In</button>
                     </div>
                 </div>
-                <div class="row">
+                <!--<div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center" id="google-btn">
                         <div id="my-signin2"></div>
                     </div>
-                </div>
+                </div>-->
                 <br/>
                 <div class="form-group m-b-0">
                     <div class="col-sm-12 text-center">
