--- a/src/app/pages/personalrrhh/modeloswc/modeloswc.component.html
+++ b/src/app/pages/personalrrhh/modeloswc/modeloswc.component.html
@@ -72,7 +72,7 @@
                                     </a>
                                     &nbsp;
                                     <a *ngIf="modelo.estado" class="cursor" title="Inactivar Modelo del Sistema" data-toggle="tooltip" data-original-title="Inactivar Modelo del Sistema" (click)="inactivarModelo(modelo)">
-                                        <i class="fa fa-close text-danger"></i>
+                                        <i class="fa fa-ban text-danger"></i>
                                     </a>
 
                                     <a *ngIf="!modelo.estado" class="cursor" title="Reactivar Modelo del Sistema" data-toggle="tooltip" data-original-title="Reactivar Modelo en el Sistema" (click)="reActivarModelo(modelo)">
